public enum CardType {
    DEBIT,
    CREDIT
}