public enum TransactionType {
    BALANCE_INQUIRY,
    CASH_WITHDRAWAL,
    PIN_CHANGE,
    MINI_STATEMENT
}